--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ isort==5.6.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
 lazy-object-proxy==1.4.3
+lxml==4.6.2
 MarkupSafe==1.1.1
 mccabe==0.6.1
 pylint==2.6.0
